# Claim-Automation

./: .env.example  .gitignore  README.md  pyproject.toml  requirement.txt
NEXT_STEP/: .gitignore  README.md
NEXT_STEP/claimos-fraud-project/: start.ps1
NEXT_STEP/policy_agent/: run_full_pipeline.py  state.py
agents/decision/: __init__.py  decision_agent.py  escalation_evaluator.py  synthesis_agent.py
agents/extraction/: __init__.py  cross_document_checker.py  document_classifier.py  document_forensics.py  document_intelligence_agent.py  field_extractor.py  intake_agent.py  missing_doc_tracker.py  ocr_engine.py  pre_intake_router.py  trust_score_engine.py
agents/output/: __init__.py  communications_agent.py  human_escalation_agent.py  settlement_agent.py
agents/policy/: __init__.py  benefit_calculator.py  policy_chunker.py  policy_rag_agent.py
agents/verification/: __init__.py  aadhaar_verifier.py  anomaly_detector.py  claim_history_checker.py  crs_registry_verifier.py  (+7 more)
api/: cross_verify_field_map.json  cross_verify_field_map_stage2.json  document_schemas.json  document_schemas_natural_death.json  document_schemas_unnatural_death.json  face_verification.py  main.py  validation_rules.py
fraud_pipeline/: .env.example  README.md  __init__.py  main.py  requirements.txt  run_demo.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
infrastructure/: docker-compose.yml
orchestration/: conflict_resolution.py  langgraph_workflow.py  orchestrator_agent.py
policy_agent/: __init__.py  mock_data.py  orchestrator.py  rag_pipeline.py  run_full_pipeline.py  test_case_1_full.json
scratch/: test_hf.py  test_qwen_classifier.py
scripts/: e2e_smoke.py
tests/: conftest.py
(+98 files in other folders)
