[tool.poetry]
name = "claimos-ai"
version = "0.1.0"
description = "ICICI Life Insurance — AI-powered death claim automation pipeline"
authors = ["Manish <princesuthar2525@gmail.com>"]
readme = "README.md"
packages = [{include = "shared"}, {include = "agents"}, {include = "orchestration"}, {include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"

# Agent Framework
langgraph = "^0.2"
langchain = "^0.2"
langchain-anthropic = "^0.1"
langchain-openai = "^0.1"

# LLM SDKs
anthropic = "^0.28"
openai = "^1.30"

# API
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
python-multipart = "^0.0.9"
pydantic = "^2.7"
pydantic-settings = "^2.2"

# Database
asyncpg = "^0.29"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}

# Messaging
aiokafka = "^0.10"

# Vector DB
pinecone-client = "^4.0"

# Graph DB
neo4j = "^5.20"

# OCR
azure-ai-formrecognizer = "^3.3"
boto3 = "^1.34"
paddleocr = "^2.7"
Pillow = "^10.3"
numpy = "^1.26"

# ML / Fraud
scikit-learn = "^1.5"
transformers = "^4.41"
torch = "^2.3"

# Audit
boto3 = "^1.34"

# Utilities
python-jose = {extras = ["cryptography"], version = "^3.3"}
httpx = "^0.27"
Levenshtein = "^0.25"
cohere = "^5.5"
reportlab = "^4.2"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
ruff = "^0.4"
mypy = "^1.10"
black = "^24.4"
factory-boy = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
